<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/email_bg_gradient"
    android:orientation="vertical"
    android:padding="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:tint="@color/white"
        android:src="@drawable/back"
        />

    <com.hitasoft.app.customclass.CustomTextView
        android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:layout_toRightOf="@+id/backbtn"
        android:text="@string/forgot_password"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/white"
        app:fonts="font_regular.ttf" />
    </RelativeLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:theme="@style/EmailTextLabel"
        app:hintTextAppearance="@style/EmailHintLabel">

        <com.hitasoft.app.customclass.CustomEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fonts="font_regular.ttf" />
    </android.support.design.widget.TextInputLayout>



    <com.hitasoft.app.customclass.CustomTextView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/primary_rounded_corner"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fonts="font_regular.ttf" />



</LinearLayout>
