<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/premium_lay"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/visiters_premium_bg" />

        <com.hitasoft.app.customclass.CustomTextView
            android:id="@+id/unlimited_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/get_more_visitor"
            android:textColor="@color/colorGray"
            android:textSize="30sp"
            app:fonts="font_bold.ttf" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="180dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/become_premium"
        android:layout_below="@+id/view" />

    <com.hitasoft.app.customclass.CustomTextView
        android:id="@+id/become_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/primary_rounded_corner"
        android:gravity="center"
        android:maxLines="1"
        android:visibility="gone"
        android:padding="12dp"
        android:text="@string/become_premium_member"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fonts="font_regular.ttf" />

    <com.hitasoft.app.customclass.ProgressWheel xmlns:wheel="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        wheel:matProg_barColor="@color/colorPrimary"
        wheel:matProg_progressIndeterminate="true" />

    <LinearLayout
        android:id="@+id/nullLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/no_visiters" />

        <com.hitasoft.app.customclass.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/no_visitors"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/primaryText"
            app:fonts="font_regular.ttf" />

        <com.hitasoft.app.customclass.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:text="@string/update_your_profile"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/secondaryText"
            app:fonts="font_regular.ttf" />
    </LinearLayout>

</RelativeLayout>