<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/actionbar"
        layout="@layout/tool_bar_activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionbar">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hitasoft.app.customclass.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:text="@string/im_here_to"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                app:fonts="font_bold.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.hitasoft.app.customclass.ExpandableHeightGridView
                    android:id="@+id/people_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/dividerColor"
                    android:horizontalSpacing="1dp"
                    android:numColumns="2"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="1dp" />
            </LinearLayout>

            <com.hitasoft.app.customclass.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:text="@string/control_your_profile"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                app:fonts="font_bold.ttf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.hitasoft.app.customclass.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="15dp"
                            android:text="@string/dont_show_my_age"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            app:fonts="font_regular.ttf" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/age_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:theme="@style/SwitchTheme" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.hitasoft.app.customclass.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/make_my_distance_invisible"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            app:fonts="font_regular.ttf" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/distance_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:theme="@style/SwitchTheme" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.hitasoft.app.customclass.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="15dp"
                            android:text="@string/make_me_invisible"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            app:fonts="font_regular.ttf" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/invisible_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:theme="@style/SwitchTheme" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/adsLay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <com.hitasoft.app.customclass.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="15dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/hide_ads"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp"
                            app:fonts="font_regular.ttf" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/ads_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:theme="@style/SwitchTheme" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/switch_view"
                    android:layout_width="60dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <com.hitasoft.app.customclass.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:text="@string/notification_setting"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                app:fonts="font_bold.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.hitasoft.app.customclass.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:text="@string/new_messages"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp"
                        app:fonts="font_regular.ttf" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/message_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:theme="@style/SwitchTheme" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <com.hitasoft.app.customclass.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/likes"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp"
                        app:fonts="font_regular.ttf" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/likes_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:theme="@style/SwitchTheme" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.hitasoft.app.customclass.CustomTextView
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/change_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryText"
                app:fonts="font_regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.hitasoft.app.customclass.CustomTextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/logout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryText"
                app:fonts="font_regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.hitasoft.app.customclass.CustomTextView
                android:id="@+id/delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/deactivate_account"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                app:fonts="font_regular.ttf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>

    </ScrollView>

    <com.hitasoft.app.customclass.ProgressWheel xmlns:wheel="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        wheel:matProg_barColor="@color/colorPrimary"
        wheel:matProg_progressIndeterminate="true" />

    <com.hitasoft.app.customclass.CustomTextView
        android:id="@+id/nullText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Error occured, Please try after sometimes"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/secondaryText"
        android:visibility="gone"
        app:fonts="font_regular.ttf" />

</RelativeLayout>